[gd_scene load_steps=8 format=3 uid="uid://ch14e0fb16x0h"]

[ext_resource type="Script" path="res://scenes/singleplayer_menu/single_player_menu.gd" id="1_71h8x"]
[ext_resource type="FontFile" uid="uid://ehad7l3e4y2d" path="res://assets/fonts/Kenney Pixel.ttf" id="2_tso6d"]
[ext_resource type="PackedScene" uid="uid://bw4puwj8twckm" path="res://scenes/character_picker/character_picker.tscn" id="3_o5khh"]
[ext_resource type="PackedScene" uid="uid://okvlhjqa7mnx" path="res://scenes/game_start_timer/game_start_timer.tscn" id="4_0dmyj"]

[sub_resource type="Animation" id="Animation_plf3x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_hduyj"]
resource_name = "game_start"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.360784), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wqm8e"]
_data = {
"RESET": SubResource("Animation_plf3x"),
"game_start": SubResource("Animation_hduyj")
}

[node name="SinglePlayerMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_71h8x")
metadata/_edit_lock_ = true
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.878431, 0.415686, 0.156863, 1)
metadata/_edit_lock_ = true

[node name="ReturnButton" type="Button" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 57.0
offset_right = 105.0
offset_bottom = 113.0
text = "Voltar"

[node name="ChooseYourCharacterRichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_top = 32.0
offset_right = 1152.0
offset_bottom = 134.0
mouse_filter = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_tso6d")
theme_override_font_sizes/normal_font_size = 128
bbcode_enabled = true
text = "[center][shake rate=3 level=10][tornado freq=5 radius=5]Escolha seu boneco"

[node name="CharacterPicker" parent="." instance=ExtResource("3_o5khh")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -160.0
offset_right = 280.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
active_player = "solo"
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wqm8e")
}

[node name="FadeColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 1, 1, 0)
metadata/_edit_lock_ = true

[node name="GameStartTimer" parent="." instance=ExtResource("4_0dmyj")]
visible = false
position = Vector2(576, 472)

[connection signal="pressed" from="ReturnButton" to="." method="_on_return_button_pressed"]
